2003-04-13  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	New file by Robert C Dege <RDege@northropgrumman.com>

	* configure.in: Find mcutil binary.
	* configure.in (AC_CONFIG_FILES): Add changer-src/chg-mcutil.sh and
	  example/chg-mcutil.conf.
	* changer-src/Makefile (libexec_SCRIPTS): Add chg-mcutil.
	* changer-src/chg-mcutil.sh.in: New file.
	* example/Makefile (EXTRA_DIST): Add chg-mcutil.conf
	* example/chg-mcutil.conf.in: New file.

2003-04-08  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/amanda.8.in (blocksize): Document the --with-maxtapeblocksize
	  configure option.

2003-04-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverifyrun.sh.in: Run the amverify command.

2003-04-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/reporter.c: Get the filenumber correct.

2003-04-01  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/reporter.c: Print a postscript label for each tape used.

2003-03-18  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in (*-sco3.2v4*): It is not like *-sco3.2v5*,
	  define DEV_PREFIX and RDEV_PREFIX.

2003-03-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Typo.

2003-03-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Gert Doering <gert@greenie.muc.de>

	* client-src/getfsent.c (get_fstab_nextentry): Compile on *-sco3.2v4*.

2003-03-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Compile on *-sco3.2v4*

2003-03-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* configure.in: Use '=' instead of '=='.

2003-03-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* recover-src/set_commands.c (set_tape): Recognize null:, rait:,
	  file: and tape: as driver, not host name.

2003-03-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>
